--- a/html/catalog.html
+++ b/html/catalog.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <title>Каталог — Барбершоп «Бородинский»</title>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../normalize.css">
+  <link rel="stylesheet" href="../style.catalog.css">
 </head>
 
-<body>
-    <header>
-        <nav>
-            <a href="index.html">
-                <img src="img/index-logo.svg" width="111" height="24" alt="Логотип
+<body class="page body inner-page">
+    
+    <header class="main-header">
+        <nav class="main-navigation container">
+            <a class="main-header-logo" href="index.html">
+                <img src="../img/logo.svg" width="111" height="24" alt="Логотип
         барбершопа «Бородинский»">
             </a>
-            <ul>
+            <ul class="site-navigation">
                 <li><a href="blank.html">Информация</a></li>
                 <li><a href="blank.html">Новости</a></li>
                 <li><a href="blank.html">Прайс-лист</a></li>
                 <li><a href="blank.html">Магазин</a></li>
                 <li><a href="blank.html">Контакты</a></li>
             </ul>
-            <a href="blank.html">Вход</a>
+            <div class="user-navigation">
+            <a class="login-link" href="blank.html">Вход</a>
+        </div>
         </nav>
     </header>
-    <main>
-        <h1>Средство для ухода</h1>
+    <main class="page-catalog container">
+        <h1 class="page-title">Средство для ухода</h1>
         <ul>
             <il>
                 <a href="index.html">Главная</a>
@@ -39,6 +45,56 @@
 
         <section>
             <h2>Фильтр товаров</h2>
+            <form action="https://echo.htmlacademy.ru" method="GET">
+                <fieldset>
+                    <legend>Производители:</legend>
+                    <ul>
+                        <li>
+                            <input type="checkbox" name="baxter-of-california" id="filter
+                        baxter-of-california" checked>
+                            <label for="filter-baxter-of-california">Baxter of California</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="mr-natty" id="filter-mr-natty">
+                            <label for="filter-mr-natty">Mr Natty</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="suavecito" id="filter-suavecito" checked>
+                            <label for="filter-suavecito">Suavecito</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="malin-goetz" id="filter-malin-goetz">
+                            <label for="filter-malin-goetz">Malin+Goetz</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="murrays" id="filter-murrays">
+                            <label for="filter-murrays">Murrays</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="american-crew" id="filter-american-crew" checked>
+                            <label for="filter-american-crew">American Crew</label>
+                        </li>
+                    </ul>
+                </fieldset>
+                <fieldset>
+                    <legend>Группы товаров:</legend>
+                    <ul>
+                        <li>
+                            <input type="radio" name="product-group" value="shaving" id="filter-shave">
+                            <label for="filter-shave">Бритвенные принадлежности</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="product-group" value="hair-care" id="filter-care" checked>
+                            <label for="filter-care">Средства для ухода</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="product-group" value="accessories" id="filter-accessories">
+                            <label for="filter-accessories">Аксессуары</label>
+                        </li>
+                    </ul>
+                </fieldset>
+                <button type="submit">Показать</button>
+            </form>
         </section>
 
         <section>
@@ -48,7 +104,7 @@
                     <a href="product.html">
                         <h3>Набор для путешествий «BAXTER OF CALIFORNIA»</h3>
                         <p>
-                            <img src="img/product-1.jpg" width="220" height="165"
+                            <img src="../img/product-1.png" width="220" height="165"
                                 alt="Набор для путешествий «Baxter of California»">
                         </p>
                     </a>
@@ -61,7 +117,7 @@
                     <a href="product.html">
                         <h3>Увлажняющий кондиционер «BAXTER OF CALIFORNIA»</h3>
                         <p>
-                            <img src="img/product-1.jpg" width="220" height="165"
+                            <img src="../img/product-2.png" width="220" height="165"
                                 alt="Увлажняющий кондиционер «Baxter of California»">
                         </p>
                     </a>
@@ -74,7 +130,7 @@
                     <a href="product.html">
                         <h3>Гель для волос «SUAVECITO»</h3>
                         <p>
-                            <img src="img/product-1.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
+                            <img src="../img/product-3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
                         </p>
                     </a>
                     <p>
@@ -86,7 +142,7 @@
                     <a href="product.html">
                         <h3>Глина для укладки волос «AMERICAN CREW»</h3>
                         <p>
-                            <img src="img/product-1.jpg" width="220" height="165"
+                            <img src="../img/product-4.jpg" width="220" height="165"
                                 alt="Гель для укладки волос «American Crew»">
                         </p>
                     </a>
@@ -99,7 +155,8 @@
                     <a href="product.html">
                         <h3>Гель для волос «AMERICAN CREW»</h3>
                         <p>
-                            <img src="img/product-1.jpg" width="220" height="165" alt=" Гель для волос «American Crew»">
+                            <img src="../img/product-5.jpg" width="220" height="165"
+                                alt=" Гель для волос «American Crew»">
                         </p>
                     </a>
                     <p>
@@ -111,7 +168,7 @@
                     <a href="product.html">
                         <h3>Набор для бриться «Baxter of California»</h3>
                         <p>
-                            <img src="img/product-1.jpg" width="220" height="165"
+                            <img src="../img/product-6.jpg" width="220" height="165"
                                 alt="Набор для бритья «Baxter of California»">
                         </p>
                     </a>
