--- a/html/product.html
+++ b/html/product.html
@@ -40,19 +40,19 @@
 
         <section>
             <h2>Изображение товара</h2>
-            <img src="img/product-big.jpg" width="460" height="498" alt="Фото всего
+            <img src="../img/product-big.jpg" width="460" height="498" alt="Фото всего
               набора">
             <ul>
                 <li>
-                    <img src="img/product-small-1.jpg" width="140" height="149" alt="Фото
+                    <img src="../img/product-small-1.png" width="140" height="149" alt="Фото
                 в анфас">
                 </li>
                 <li>
-                    <img src="img/product-small-2.jpg" width="140" height="149" alt="Фото
+                    <img src="../img/product-small-2.png" width="140" height="149" alt="Фото
                 в профиль">
                 </li>
                 <li>
-                    <img src="img/product-small-3.jpg" width="140" height="149" alt="Фото
+                    <img src="../img/product-small-3.png" width="140" height="149" alt="Фото
                 отдельной части">
                 </li>
             </ul>
