--- a/html/index.html
+++ b/html/index.html
@@ -24,8 +24,8 @@
           <ul class="site-navigation">
             <li><a href="blank.html">Информация</a></li>
             <li><a href="blank.html">Новости</a></li>
-            <li><a href="product.html">Прайс-лист</a></li>
-            <li><a href="catalog.html">Магазин</a></li>
+            <li><a href="blank.html">Прайс-лист</a></li>
+            <li><a href="blank.html">Магазин</a></li>
             <li><a href="blank.html">Контакты</a></li>
           </ul>
           <div class="user-navigation">
